--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     </section>
 
-    <!-- <section id="contact">
+    <section id="contact">
         <h1 class="h-primary center">Contact Us</h1>
         <div id="contact-box">
             <form action="">
@@ -136,7 +136,7 @@
                 </div>
             </form>
         </div>
-    </section> -->
+    </section>
 
     
 </body>
