--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="./logo-light (2).svg" alt="MyOnlineMeal.com">
+            <img src="./logo-light (2).svg" alt="MyOnline website">
         </div>
         <ul>
             <li class="item"><a href="#home">Home</a></li>
@@ -137,6 +137,13 @@
             </form>
         </div>
     </section>
+
+   <footer>
+    <h1> #abhishek mishra #</h1>
+    <div class="abhi">
+         </div>
+   </footer>
+    
 
     
 </body>
