--- a/index.html
+++ b/index.html
@@ -139,7 +139,11 @@
     </section>
 
    <footer>
-    <h1> #abhishek mishra #</h1>
+    <h1> Professional Designs</h1>
+    <p>Choose a design that aligns with your business. You can customize the color</p>
+    <p>scheme to match your branding, and easily switch design later if necessary.</p>
+    
+
     <div class="abhi">
          </div>
    </footer>
